# octavia-lib

./: .coveragerc  .gitignore  .gitreview  .pylintrc  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: index.rst
doc/source/install/: index.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
octavia_lib/: __init__.py  i18n.py  version.py
octavia_lib/api/drivers/: data_models.py  driver_lib.py  exceptions.py  provider_base.py
octavia_lib/common/: constants.py
octavia_lib/hacking/: checks.py
octavia_lib/tests/: test_octavia_lib.py
octavia_lib/tests/unit/: base.py
octavia_lib/tests/unit/api/drivers/: test_data_models.py  test_driver_lib.py  test_exceptions.py  test_provider_base.py
octavia_lib/tests/unit/hacking/: test_checks.py
releasenotes/notes/: Add-Conflict-exception-67bca85f9d660a36.yaml  Add-get-methods-to-driver-lib-dae3c217e7ac9e82.yaml  Add-member-vnic_type-c42bed41588b6f02.yaml  Added-HSTS-support-7d1fbfc35ee5dc29.yaml  Fix-possible-receive-timeout-error-f6d2454c48eb10cf.yaml  Initial-cookiecutter-commit-41d89a60d6328b51.yaml  add-additional-vip-support-becdb29c5187b514.yaml  add-availability-zone-validation-ed853a3ee89570be.yaml  add-az-to-loadbalancer-1e87b46ba29101d3.yaml  add-constants-66f52c4d4cfd0215.yaml  add-failover-stopped-status-722759b7432cad6a.yaml  add-lb-algorithm-source-ip-port-5cc83a9e3fcf4763.yaml  add-listener-allowed-cidrs-ef2cd3afbc3a1ebe.yaml  add-listener-alpn-protocols-ecb49db86b956c71.yaml  add-not-found-exception-7f9d188cd22f69e1.yaml  add-pool-alpn-protocols-a791538ab214e780.yaml  add-support-for-xip-headers-33efe64184c1f435.yaml  add-tls-protocols-for-listener-and-pool-model-e9083b85afc62ef0.yaml  add-vip_sg_ids-6b1cfe9b558f3442.yaml  adding-cipher-list-support-for-provider-drivers-6a4dbec2d0254aae.yaml  drop-python-2-7-f17da6245b0ebc13.yaml
releasenotes/source/: conf.py  index.rst
tools/: coding-checks.sh
zuul.d/: projects.yaml
