[metadata]
name = octavia-lib
summary = A library to support Octavia provider drivers.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/octavia-lib/latest/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    octavia_lib
data_files =
    share/octavia-lib =
        LICENSE
        README.rst

[wheel]
universal = 1

[compile_catalog]
directory = octavia_lib/locale
domain = octavia_lib

[update_catalog]
domain = octavia_lib
output_dir = octavia_lib/locale
input_file = octavia_lib/locale/octavia_lib.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = octavia_lib/locale/octavia_lib.pot
